manifests/base/lifeonabike/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lifeonabike
  labels:
    app.kubernetes.io/name: lifeonabike
