manifests/base/lifeonabike/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: lifeonabike
  labels:
    app: lifeonabike-web
    app.kubernetes.io/name: lifeonabike-web
spec:
  selector:
    app: lifeonabike-web
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
