manifests/base/lifeonabike/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  namespace: lifeonabike
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt-k8s-n37-ca-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    external-dns.alpha.kubernetes.io/hostname: lifeonabike.ca,www.lifeonabike.ca
    external-dns.alpha.kubernetes.io/ttl: "300"
spec:
  ingressClassName: nginx
  tls:
    - hosts: ["lifeonabike.ca", "www.lifeonabike.ca"]
      secretName: lifeonabike-ca-tls
  rules:
    - host: lifeonabike.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 80
    - host: www.lifeonabike.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 80
